examples/bad/release_bounds_oob.mko
fn main() {
    let xs = [1, 2, 3]
    print_int(xs[99])
}
